--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -49,6 +49,8 @@
     <flyway.version>11.11.1</flyway.version>
     <opentelemetry.version>1.57.0</opentelemetry.version>
     <commons-lang3.version>3.20.0</commons-lang3.version>
+    <reactor-netty-http.version>1.2.11</reactor-netty-http.version>
+    <netty-bom.version>4.1.129.Final</netty-bom.version>
   </properties>
 
   <dependencies>
@@ -231,6 +233,18 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>${commons-lang3.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.projectreactor.netty</groupId>
+        <artifactId>reactor-netty-http</artifactId>
+        <version>${reactor-netty-http.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-bom</artifactId>
+        <version>${netty-bom.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -421,10 +435,10 @@
         <version>3.12.0</version>
         <configuration>
           <source>8</source>
-          <doctitle>Javadoc Documentation for ${project.name} ${project.version}
+          <doctitle>
+            Javadoc Documentation for ${project.name} ${project.version}
           </doctitle>
-          <windowtitle>${project.name} ${project.version}
-          </windowtitle>
+          <windowtitle>${project.name} ${project.version}</windowtitle>
         </configuration>
       </plugin>
       <plugin>
@@ -445,20 +459,24 @@
                   </excludedScopes>
                   <excludes>
                     <!-- Excluding opentelemetry due to the use of an alpha version that does not
-                    match the rest of the versions -->
+                         match the rest of the versions -->
                     <exclude>io.opentelemetry:opentelemetry-api-incubator</exclude>
                     <!-- Excluding jetbrains annotations due to the requirement on kotlin
-                    dependencies -->
+                         dependencies -->
                     <exclude>org.jetbrains:annotations</exclude>
                   </excludes>
                 </dependencyConvergence>
                 <requireMavenVersion>
                   <version>[3.2,)</version>
-                  <message>Invalid Maven version. It should be at least 3.2</message>
+                  <message>
+                    Invalid Maven version. It should be at least 3.2
+                  </message>
                 </requireMavenVersion>
                 <requireJavaVersion>
                   <version>17</version>
-                  <message>Invalid Java Version. It should be at least 17</message>
+                  <message>
+                    Invalid Java Version. It should be at least 17
+                  </message>
                 </requireJavaVersion>
                 <requireNoRepositories>
                   <allowedRepositories>
