--- a/cypress/package.json
+++ b/cypress/package.json
@@ -15,9 +15,8 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^24.0.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.8",
-    "@cypress/webpack-preprocessor": "^7.0.2",
     "cypress": "^15.9.0",
-    "ts-loader": "^9.4.2",
+    "esbuild": "^0.27.2",
     "typescript": "^5.0.4",
     "webpack": "^5.81.0"
   },
